syntax = "proto3";

package monad_proto.discovery;

import "basic.proto";

message ProtoIPv4 {
  bytes address = 1;
}

message ProtoIPv6 {
  bytes address = 1;
}

message ProtoIPAddress {
  oneof address {
    ProtoIPv4 ipv4 = 1;
    ProtoIPv6 ipv6 = 2;
  }
}

message ProtoNetworkEndpoint {
  ProtoIPAddress ip = 1;
  uint32 port = 2;
}

message ProtoMonadNameRecord {
  ProtoNetworkEndpoint endpoint = 1;
  monad_proto.basic.ProtoNodeId node_id = 2;
  uint64 seq_num = 3;
}
